Fix: Add configs Dockerfile and Compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,9 @@ services:
       - .env
     restart: always
 
+volumes:
+  - ./certs:/app/certs:
+
 #    environment:
 #      - POSTGRES_SERVER=db
 #      - POSTGRES_USER=postgres
@@ -45,3 +48,4 @@ services:
 #secrets:
 #  db-password:
 #    file: db/password.txt
+
